# 148-fall-2025-final-project-fall-2025-final-project-team-10

./: .gitignore  README.md  cmd_vel_to_ackermann.py  controller_server.yaml  frames.gv  master.launch.py  master2.launch.py  master3.launch.py  master4.launch.py  master5.launch.py  master6.launch.py  master7.launch.py  mission_control.py  vesc.launch.py
src/: explore.yaml  my_nav2_params.yaml  twist_mux_params.yaml  vesc_odom_params.yaml
src/camera_pkg/: package.xml  setup.py
src/camera_pkg/camera_pkg/: 5fps.py  5fpsbackup.py  5fpsbackup2.py  5fpsbackup3.py  5fpsbackup4.py  5fpsbackup5.py  camera_publisher.py  camtest.py  combined.py  depth.py  processor.py
src/locate_pkg/: package.xml  setup.cfg  setup.py
src/locate_pkg/locate_pkg/: locate_node.py  locate_node_backup.py  locate_node_backup2.py
src/mux_pkg/: package.xml  setup.cfg  setup.py
src/mux_pkg/launch/: mux_launch.py
src/mux_pkg/mux_pkg/: mux_controller.py  stop_publisher.py  twist_mux_params.yaml
src/servo_controller/: package.xml  setup.py
src/servo_controller/servo_controller/: servo_node.py  servo_node_backup.py  servo_node_old.py  servo_sweep.py
src/speaker_pkg/: package.xml  setup.cfg  setup.py
src/speaker_pkg/speaker_pkg/: speaker_node.py
src/vesc_config/: vesc.yaml  vesc2.yaml
src/wall_follow_pkg/: package.xml  setup.cfg  setup.py
src/wall_follow_pkg/wall_follow_pkg/: wall_follow.py
