<?xml version="1.0"?>
<package format="3">
  <name>mux_pkg</name>
  <version>0.0.1</version>
  <description>Custom twist_mux controller package for /locked_on and /is_found logic</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>twist_mux</depend>
  <depend>twist_mux_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
